# prolog0

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.circleci/: config.yml
src/: ast.cc  ast.h  casting.h  codegen.cc  codegen.h  inst.cc  inst.h  machine.cc  machine.h  main.cc  main.cpp  parser.cc  parser.h  rtti.h  scanner.cc  scanner.h  test.cc  token.cc  token.h  util.h  wam.cc  wam.cpp  wam.h
test/: test_codegen.cpp  test_parser.cpp
